--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: newsportal
-  password: <%= ENV["NEWSPORTAL_DATABASE_PASSWORD"] %>
+  password: <%= ENV['NEWSPORTAL_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
